<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/shutterRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="#E91E63"
            android:checked="true"
            android:onClick="checkButton"
            android:shadowColor="#FFFFFF"
            android:text="@string/radioShutter"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/isoRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="#00000000"
            android:buttonTint="#E91E63"
            android:onClick="checkButton"
            android:shadowColor="#FFFFFF"
            android:text="@string/radioIso"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/apertureRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="#E91E63"
            android:onClick="checkButton"
            android:shadowColor="#FFFFFF"
            android:text="@string/radioAperture"
            android:textSize="16sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shutterLabel"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/shutterLeftButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="beforeButtonClicked"
                app:icon="@drawable/minus"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="#FFFFFF"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/shutterTextView"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/shutterRightButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="nextButtonClicked"
                app:icon="@android:drawable/ic_input_add"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="#FFFFFF"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isoLabel"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/isoLeftButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="beforeButtonClicked"
                app:icon="@drawable/minus"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="#FFFFFF"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/isoTextView"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/isoRightButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="nextButtonClicked"
                app:icon="@android:drawable/ic_input_add"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="#FFFFFF"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apertureLabel"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/apertureLeftButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="beforeButtonClicked"
                app:icon="@drawable/minus"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="#FFFFFF"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/apertureTextView"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/apertureRightButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="nextButtonClicked"
                app:icon="@android:drawable/ic_input_add"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="#FFFFFF"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/measureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measureButton"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:icon="@drawable/light_bulb"
        app:iconPadding="10dp"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>